# Primes

./: CMakeLists.txt  Doxyfile  Readme.md
gtest/: main.cpp
lib/include/: primes.h
lib/src/: primes.cpp
src/: main.cpp
